# OpenMP_CUDA

./: CMakeLists.txt  README.md  run.sh
results/mandelbrot/: metrics_task1.csv  timings_task1.csv
results/nbody_cuda/: metrics_cuda.txt  simulation_report.txt  trajectories.csv
scripts/: batch_run_task1.py  batch_run_task2.py  plot_mandelbrot.py
src/: mandelbrot.c
